<resources>
    <string name="app_name">att</string>
    <string name="login">Login</string>
    <string name="join_button">Entrar</string>
    <string name="username">email</string>
    <string name="senha">Senha</string>adadsd
    <string name="senha_inserir">Insira sua senha</string>
    <string name="username_inserir">Insira seu username</string>
    <string name="email_inserir">Insira seu e-mail</string>
    <string name="create_account">Criar uma conta</string>
    <string name="create">Criar</string>
    <string name="returned">Voltar</string>
    <string name="welcome">Bem-vindo</string>
</resources>