<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="371dp"
        android:layout_height="690dp"
        app:cardBackgroundColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_button"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <TextView
                android:id="@+id/id_entry_key"
                android:layout_width="53dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:text="@string/senha"
                app:layout_constraintBottom_toBottomOf="@+id/id_lock"
                app:layout_constraintStart_toEndOf="@+id/id_lock"
                app:layout_constraintTop_toTopOf="@+id/id_lock"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/id_email"
                app:layout_constraintTop_toBottomOf="@+id/id_email" />

            <TextView
                android:id="@+id/text_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.852"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />

            <ImageView
                android:id="@+id/id_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_username"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <TextView
                android:id="@+id/id_email"
                android:layout_width="100dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:text="@string/username"
                app:layout_constraintBottom_toBottomOf="@+id/id_people"
                app:layout_constraintStart_toEndOf="@+id/id_people"
                app:layout_constraintTop_toTopOf="@+id/id_people"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="@+id/id_entry_key"
                app:layout_constraintTop_toBottomOf="@+id/id_entry_key" />

            <TextView
                android:id="@+id/id_login"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:text="@string/login"
                app:autoSizeMaxTextSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/id_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="124dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_login"
                app:srcCompat="@drawable/ic_baseline_people_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>